test/bad/double_declaration_02.mpp
fun foo():int { return 1; };
var foo:int;
